# genai

./: output.txt  pyproject.toml  skuodas_output.txt
examples/: fech_todos.py
examples/DeepSeek_client/: deepseek.py
examples/function-calling/: draft.py  function-calling.ipynb  get_info_about_city.py  sample_get_weather.py  skuodas.txt
examples/google-ai/: gemini.py  gemini_flash.py
examples/llama_client/: llama.py
examples/notebooks/: example.ipynb
examples/openai_client/: github_model_openai.py  simplified_RAG.py  simplified_RAG2.py
examples/rag/: lietuvos-istorija.ipynb  rag-test.ipynb
learn/: calculator.py  hello.py  pig.py
